--- a/index.html
+++ b/index.html
@@ -7,83 +7,156 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f0f2f5;
             color: #333;
         }
         header {
-            background-color: #f8f9fa;
-            color: #333;
+            background-color: #1a1a1a;
+            color: #fff;
             padding: 10px 20px;
             text-align: center;
+            position: sticky;
             top: 0;
             z-index: 1000;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+            border-bottom: 3px solid #ff4500;
         }
         header h1 {
             margin: 0;
-            font-size: 1.8em;
+            font-size: 2.5em;
+            font-weight: 700;
         }
         header p {
             margin: 5px 0 10px;
-            font-size: 1em;
+            font-size: 1.2em;
+            font-style: italic;
         }
         nav ul {
             list-style: none;
             padding: 0;
-            margin: 0;
+            margin: 10px 0 0;
             display: flex;
             justify-content: center;
-            gap: 15px;
+            gap: 20px;
+            flex-wrap: wrap;
         }
         nav a {
-            color: #333;
+            color: #ff4500;
             text-decoration: none;
             font-weight: bold;
-            padding: 5px 10px;
+            padding: 8px 15px;
+            border: 2px solid transparent;
+            border-radius: 5px;
+            transition: all 0.3s ease;
         }
         nav a:hover {
-            background-color: #0078d7;
+            background-color: #ff4500;
             color: #fff;
-            border-radius: 5px;
+            border-color: #fff;
         }
         section {
-            padding: 20px;
-            margin: 10px auto;
-            max-width: 800px;
+            padding: 40px 20px;
+            margin: 32px auto;
+            max-width: 1000px;
+            width: 90%;
             background: #fff;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
         }
         section h2 {
-            border-bottom: 2px solid #0078d7;
-            padding-bottom: 5px;
-            margin-bottom: 15px;
+            text-align: center;
+            color: #ff4500;
+            font-size: 2em;
+            margin-bottom: 20px;
         }
         footer {
             text-align: center;
-            padding: 10px 0;
-            background: #f8f9fa;
-            color: #333;
+            padding: 20px 0;
+            background: #1a1a1a;
+            color: #fff;
             position: relative;
             bottom: 0;
             width: 100%;
-            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+            border-top: 3px solid #ff4500;
+        }
+        footer p {
+            margin: 0;
+            font-size: 1em;
         }
         .project {
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         }
         .project h3 {
-            margin-bottom: 5px;
+            color: #333;
+            font-size: 1.5em;
+            margin-bottom: 10px;
+        }
+        .project p {
+            margin-bottom: 10px;
+        }
+        .project a {
+            color: #ff4500;
+            text-decoration: underline;
+        }
+
+        /* Responsive Styles */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2em;
+            }
+            header p {
+                font-size: 1em;
+            }
+            nav ul {
+                flex-direction: column;
+                gap: 10px;
+            }
+            nav a {
+                padding: 10px;
+            }
+            section {
+                padding: 20px 10px;
+                margin: 10px auto;
+            }
+            section h2 {
+                font-size: 1.5em;
+            }
+            .project h3 {
+                font-size: 1.2em;
+            }
+            .project p {
+                font-size: 0.9em;
+            }
+            footer p {
+                font-size: 0.9em;
+            }
+        }
+
+        @media (max-width: 480px) {
+            header h1 {
+                font-size: 1.8em;
+            }
+            header p {
+                font-size: 0.9em;
+            }
+            nav a {
+                font-size: 0.9em;
+            }
+            section h2 {
+                font-size: 1.3em;
+            }
         }
     </style>
+
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>Shyam Joshi</h1>
-        <p>Software Engineer - Frontend</p>
+        <!-- <p>Software Engineer - Frontend</p> -->
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
