--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
             footer p {
                 font-size: 0.9em;
             }
+            nav {
+                display: none;
+            }
         }
 
         @media (max-width: 480px) {
