--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>I am a passionate Frontend Developer with over 5 years of experience building user-focused, dynamic web applications. My expertise lies in modern frameworks like Angular and Vue.js, crafting responsive designs, and mentoring teams to deliver outstanding digital solutions.</p>
+        <p>Experienced Software Engineer with a strong track record of delivering impactful solutions at top organizations, including OLA, Tata Communications, and currently Resilinc. Skilled in full-stack development, scalable system design, and cloud technologies, with expertise across diverse domains like transportation, telecommunications, and supply chain management. Adept at solving complex challenges, driving innovation, and collaborating with cross-functional teams to achieve business goals. Passionate about leveraging technology to create efficient, high-performance systems.</p>
     </section>
 
     <section id="experience">
