--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Experienced Software Engineer with a strong track record of delivering impactful solutions at top organizations, including OLA, Tata Communications, and currently Resilinc. Skilled in full-stack development, scalable system design, and cloud technologies, with expertise across diverse domains like transportation, telecommunications, and supply chain management. Adept at solving complex challenges, driving innovation, and collaborating with cross-functional teams to achieve business goals. Passionate about leveraging technology to create efficient, high-performance systems.</p>
+        <p>I am a Software Engineer with extensive experience at top companies like OLA, Tata Communications, and Resilinc. I have worked on various high-impact projects, including significant initiatives for the Government of India. Specializing in scalable solutions and modern technologies, I bring a proven ability to deliver innovative and efficient systems across industries such as transportation, telecommunications, and supply chain management.
+</p>
     </section>
 
     <section id="experience">
@@ -228,8 +229,8 @@
     <section id="contact">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:sj.shyam.satya@gmail.com">sj.shyam.satya@gmail.com</a></p>
-        <p>GitHub: <a href="https://github.com/sj-shyam-joshi">github.com/sj-shyam-joshi</a></p>
-        <p>Stack Overflow: <a href="https://stackoverflow.com/users/11822556/shyam-joshi">stackoverflow.com/users/11822556/shyam-joshi</a></p>
+        <p>GitHub: <a href="https://github.com/sj-shyam-joshi">github</a></p>
+        <p>Stack Overflow: <a href="https://stackoverflow.com/users/11822556/shyam-joshi">stackoverflow</a></p>
     </section>
 
     <footer>
